--- a/Ventas/Analisis.html
+++ b/Ventas/Analisis.html
@@ -126,7 +126,7 @@
         <div id="content" class="content-column">
             <div class="tarjeta">
                 <h4 id="infoReqCot">Info R2024-871</h4>
-                <div class=" d-flex gap-3 flex-column  flex-md-row">
+                <div class=" d-flex gap-3 flex-column  flex-lg-row">
                     <div class="d-flex flex-column  gap-2 ">
                 
                         <div class="info-detail">
