--- a/Compras/ConPlanilla.html
+++ b/Compras/ConPlanilla.html
@@ -150,7 +150,7 @@
     <div id="page-wraper">
         <div id="top-menu" class="buttons">
             <h3 id="page-title">Compras: Req con planilla</h3>
-            <div class="corner-group"><a class="btn fw-bold  secondary-btn " role="button" id="btnDevolver">Devolver con
+            <div class="btn-group "><a class="btn fw-bold  secondary-btn " role="button" id="btnDevolver">Devolver con
                     observaciones</a><a class="btn  btn-primary fw-bold btn-font" role="button" id="btnEnviar">Enviar
                     ofertas listas</a></div>
         </div>
