--- a/Compras/ConPlanilla.html
+++ b/Compras/ConPlanilla.html
@@ -155,8 +155,8 @@
                     ofertas listas</a></div>
         </div>
         <div id="content" class="content-column">
-            <div class="inforReq-wraper">
-                <div class="btn-info-req" role="group">
+            <div class="flex-wrap d-flex flex-row ">
+                <div class=" btn-group flex-wrap mb-4 " role="group">
                     <button class="btn fw-semibold" id="btnVistaProductos" type="button">Por producto</button>
                     <button class="btn fw-semibold secondary-btn " id="btnVistaProveedores" type="button">Por
                         proveedor</button>
