--- a/Inicio.html
+++ b/Inicio.html
@@ -176,7 +176,7 @@
                     <div class="input-div"><input id="input-fecha2" class="date-input form-control-sm  placeholder-text " type="date"></div>
                 </div>
             </div>
-            <div class="info-even-row todo">
+            <div class="info-even-row todo  flex-wrap flex-lg-nowrap">
                 <div class="tarjeta">
                     <h5 class="text-center fw-bold mb-3">Por hacer:&nbsp;<span id="countPorHacer">n</span></h5>
                     <div class="table-responsive">
