--- a/Requerimientos.html
+++ b/Requerimientos.html
@@ -162,7 +162,7 @@
             <div class="tarjeta">
                 <h4 id="tituloCotizaciones">Requerimientos:&nbsp;<span id="countReq">n</span></h4>
                 <div class="table-group">
-                    <div class="table-responsive" id="tblReq">
+                    <div class="table-responsive table-res-up" id="tblReq">
                         <table class="table">
                             <thead>
                                 <tr>
