Everything is done.

--- a/Administracion/Conciliacion.html
+++ b/Administracion/Conciliacion.html
@@ -134,8 +134,8 @@
                     <div class="input-div"><input id="input-fecha2" class="date-input form-control-sm placeholder-text" type="date"></div>
                 </div>
             </div>
-            <div class="info-even-row info-even-row-update">
-                <div class="tarjeta ">
+            <div class="info-even-row info-even-row-update info-even-row-mob ">
+                <div id="terjeta-one" class="tarjeta ">
                     <div class="card-title-group">
                         <h4>Registro de bancos</h4><button class="btn b secondary-btn" id="btnImportar" type="button">Importar reporte</button>
                     </div>
@@ -182,7 +182,7 @@
                         </table>
                     </div>
                 </div>
-                <div class="tarjeta">
+                <div id="terjeta-two" class="tarjeta">
                     <h4>Movimientos bancarios:&nbsp;<span id="countMovimientos">n</span></h4>
                     <div class="table-responsive" id="tblMovimientos">
                         <table class="table">
