--- a/Ventas/OCClientes.html
+++ b/Ventas/OCClientes.html
@@ -140,7 +140,7 @@
                 <h4 id="tituloCotizaciones">Cotizaciones a clientes:&nbsp;<span id="countCotizaciones">n</span></h4>
                 <div class="table-group">
                     <div class="table-responsive" id="tblCotizaciones">
-                        <table class="table table-striped table-hover">
+                        <table class="table ">
                             <thead>
                                 <tr>
                                     <th>Req</th>
@@ -236,7 +236,7 @@
                     <div>
                         <h5 id="subtitle-productos" class="mb-3 fw-bold">Productos:&nbsp;<span id="countProductos">n</span></h5>
                         <div class="table-responsive" id="tblProductos">
-                            <table class="table table-striped table-hover">
+                            <table class="table ">
                                 <thead>
                                     <tr>
                                         <th>Producto</th>
@@ -275,7 +275,7 @@
                         </div>
                         <h6 class="fw-semibold">Abonos:&nbsp;<span id="countAbonos">n</span></h6>
                         <div class="table-responsive" id="tblAbonos">
-                            <table class="table table-striped table-hover">
+                            <table class="table ">
                                 <thead>
                                     <tr>
                                         <th>Descripción</th>
@@ -317,7 +317,7 @@
                         </svg></div>
                 </div>
                 <div class="table-responsive" id="tblHistorial">
-                    <table class="table table-striped table-hover ">
+                    <table class="table ">
                         <thead>
                             <tr>
                                 <th>Elemento</th>
