--- a/Compras/ConPlanilla.html
+++ b/Compras/ConPlanilla.html
@@ -524,7 +524,7 @@
                             producto</button></div>
                 </div>
                 <div class="table-responsive " id="tblProductosEnOferta">
-                    <table class="table  table-striped table-hover ">
+                    <table class="table  ">
                         <thead>
                             <tr>
                                 <th>Oferta</th>
