--- a/Compras/OCClientes.html
+++ b/Compras/OCClientes.html
@@ -170,7 +170,7 @@
             <div class="tarjeta ">
                 <h4>Productos:&nbsp;<span id="countProductos">n</span></h4>
                 <div class="table-responsive" id="tblProductosOC">
-                    <table class="table table-striped table-hover ">
+                    <table class="table  ">
                         <thead>
                             <tr>
                                 <th>Producto descripción cliente </th>
