--- a/Compras/OCProveedores.html
+++ b/Compras/OCProveedores.html
@@ -402,7 +402,7 @@
                             <h6 class="fw-semibold">En logistica:</h6><button class="btn secondary-btn" type="button">Agregar a logística</button>
                         </div>
                         <div class="table-responsive">
-                            <table class="table table-striped table-hover ">
+                            <table class="table  ">
                                 <thead>
                                     <tr>
                                         <th>Cantidad</th>
@@ -447,7 +447,7 @@
                             <h6 class="fw-semibold">En logistica:</h6><button class="btn secondary-btn" type="button">Agregar a logística</button>
                         </div>
                         <div class="table-responsive">
-                            <table class="table table-striped table-hover ">
+                            <table class="table ">
                                 <thead>
                                     <tr>
                                         <th>Cantidad</th>
@@ -477,7 +477,7 @@
                     <h4>Revisar precios:&nbsp;<span id="countRevision">n</span></h4><button class="btn secondary-btn" id="btnGenerarOC" type="button">Generar OC</button>
                 </div>
                 <div class="table-responsive" id="tblRevisarPrecios">
-                    <table class="table table-striped table-hover ">
+                    <table class="table  ">
                         <thead>
                             <tr>
                                 <th>Detalles de producto solicitado</th>
