--- a/Logistica/NuevasOCs.html
+++ b/Logistica/NuevasOCs.html
@@ -221,7 +221,7 @@
                 </div>
                 <h6 class="fw-bold ">Productos:&nbsp;<span id="countProductos">n</span></h6>
                 <div class="table-responsive" id="tblProductos">
-                    <table class="table table-striped table-hover">
+                    <table class="table ">
                         <thead>
                             <tr>
                                 <th>Producto</th>
