--- a/Inicio.html
+++ b/Inicio.html
@@ -119,7 +119,7 @@
             <h3 id="page-title">Hola [Nombre de usuario]</h3>
         </div>
         <div id="content" class="content-column">
-            <div class="btn-group-update" role="group">
+            <div class="w-100 d-flex btn-group" role="group">
                 <button class="fw-bold  secondary-btn  w-100" id="btnMVV" type="button" data-bs-target="#toast-1" data-bs-toggle="toast">Misión, visión y valores</button>
                 <button class="fw-bold w-100 secondary-btn" id="btnFlujo" type="button">Plantilla de flujo</button></div>
             <div id="divMVV" class="tarjeta">
