--- a/Requerimientos.html
+++ b/Requerimientos.html
@@ -232,10 +232,10 @@
                     </div>
                 </div>
             </div>
-            <div class="tarjeta">
+            <div id="tarjeta-detalle" class="tarjeta">
                 <div class="card-title-group">
                     <h4 id="tituloDetalleReq">Detalles de requerimiento&nbsp;</h4>
-                    <div class="corner-group"><button class="btn fw-bold secondary-btn" id="btnCancelarReq" type="button">Cancelar</button><button class="btn fw-bold btn-primary" id="btnGuardarReq" type="button">Guardar</button><button class="btn fw-bold secondary-btn" id="btnEditarRequerimiento" type="button">Editar</button></div>
+                    <div class="btn-group"><button class="btn fw-bold secondary-btn" id="btnCancelarReq" type="button">Cancelar</button><button class="btn fw-bold btn-primary" id="btnGuardarReq" type="button">Guardar</button><button class="btn fw-bold secondary-btn" id="btnEditarRequerimiento" type="button">Editar</button></div>
                 </div>
                 <div id="inforReq" class="info-even-row mt-3">
                     <div class="d-flex flex-column gap-3">
