--- a/Ventas/OCClientes.html
+++ b/Ventas/OCClientes.html
@@ -202,7 +202,7 @@
             <div class="tarjeta">
                 <div class="card-title-group">
                     <h4 id="tituloDetalle">Detalle de órden de compra</h4>
-                    <div class="corner-group"><button class="btn  secondary-btn" id="btnCancelarOC" type="button">Cancelar</button><button class="btn btn-primary fw-bold" id="btnGuardarOC" type="button">Guardar</button><button class="btn b secondary-btn" id="btnEditarOC" type="button">Editar</button></div>
+                    <div class="btn-group "><button class="btn  secondary-btn" id="btnCancelarOC" type="button">Cancelar</button><button class="btn btn-primary fw-bold" id="btnGuardarOC" type="button">Guardar</button><button class="btn b secondary-btn" id="btnEditarOC" type="button">Editar</button></div>
                 </div>
                 <div class="info-row">
                     <div class="info-detail max-height">
