--- a/Compras/OCProveedores.html
+++ b/Compras/OCProveedores.html
@@ -251,7 +251,7 @@
             <div id="tarjetaDetalles" class="tarjeta content-column">
                 <div class="card-title-group">
                     <h4>Detalles de orden de compra</h4>
-                    <div class="corner-group"><button class="btn secondary-btn" id="btnCancelarOC" type="button">Cancelar</button><button class=" btn fw-semibold btn-primary" id="btnGuardarOC" type="button">Guardar</button><button class="btn b secondary-btn" id="btnEditarOC" type="button">Editar</button></div>
+                    <div class="btn-group"><button class="btn secondary-btn" id="btnCancelarOC" type="button">Cancelar</button><button class=" btn fw-semibold btn-primary" id="btnGuardarOC" type="button">Guardar</button><button class="btn b secondary-btn" id="btnEditarOC" type="button">Editar</button></div>
                 </div>
                 <div class="info-row justify-content-between ">
                     <div class="info-detail">
