--- a/Logistica/Movimientos.html
+++ b/Logistica/Movimientos.html
@@ -187,7 +187,7 @@
             <div class="tarjeta">
                 <div class="card-title-group">
                     <h4>Detalles de movimiento</h4>
-                    <div class="corner-group"><button class="btn secondary-btn" id="btnCancelarMovimiento" type="button">Cancelar</button><button class="btn fw-bold btn-primary" id="btnGuardarMovimiento" type="button">Guardar</button><button class="btn b secondary-btn" id="btnEditarMovimiento" type="button">Editar</button></div>
+                    <div class="btn-group"><button class="btn secondary-btn" id="btnCancelarMovimiento" type="button">Cancelar</button><button class="btn fw-bold btn-primary" id="btnGuardarMovimiento" type="button">Guardar</button><button class="btn b secondary-btn" id="btnEditarMovimiento" type="button">Editar</button></div>
                 </div>
                 <h6 class="fw-bold">Condiciones de entrega:</h6>
                 <p class="long-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>Vivamus tempus mi risus, et euismod magna rhoncus a. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. <br>Donec quis ligula orci. </p>
