--- a/Ventas/AnadirOCClientes.html
+++ b/Ventas/AnadirOCClientes.html
@@ -196,11 +196,11 @@
                     </div>
                 </div>
             </div>
-            <div class="tarjeta">
+            <div id="tarjeta-detalle" class="tarjeta">
                 <h4>Añadir detalles de orden de compra</h4>
                 <div class="info-row justify-content-between">
                     <div class="info-detail max-height">
-                        <h6 class="fw-semibold">Número de OC:</h6><input type="text" id="oc-numero" class="info-input form-control-sm placeholder-text">
+                        <h6 class="fw-semibold ">Número de OC:</h6><input type="text" id="oc-numero" class="info-input form-control-sm placeholder-text">
                     </div>
                     <div class="info-detail ">
                         <h6 class="fw-semibold "> OC PDF: </h6> <div><input type="file" class="form-control" id="oc-adjunto"></div>
