--- a/Ventas/Cotizaciones.html
+++ b/Ventas/Cotizaciones.html
@@ -179,7 +179,7 @@
             <div class="tarjeta">
                 <div class="card-title-group">
                     <h4>Detalle de cotización</h4>
-                    <div class="corner-group"><button class="btn secondary-btn" id="btnCancelarCotizacion" type="button">Cancelar</button><button class="fw-bold btn btn-primary" id="btnGuardarCotizacion" type="button">Guardar</button><button class="btn b secondary-btn" id="btnEditarCotizacion" type="button">Editar</button></div>
+                    <div class="btn-group"><button class="btn secondary-btn" id="btnCancelarCotizacion" type="button">Cancelar</button><button class="fw-bold btn btn-primary" id="btnGuardarCotizacion" type="button">Guardar</button><button class="btn b secondary-btn" id="btnEditarCotizacion" type="button">Editar</button></div>
                 </div>
                 <div class="info-column">
                     <h6 class="fw-semibold  ">Observaciones en cotización:</h6><textarea id="detail-observacion" class="info-input long-text" disabled="">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus tempus mi risus, et euismod magna rhoncus a. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec quis ligula orci. </textarea>
