update css and add humburger menu

--- a/Compras.html
+++ b/Compras.html
@@ -44,6 +44,7 @@
     <script src="assets/js/tablas.js"></script>
 
 <script src="assets/js/compras_dashboard.js"></script>
+    <script src="assets/js/humburger_menu.js"></script>
 </head>
 
 <body>
@@ -114,11 +115,20 @@
         <div id="overlay" class="nav-group-item"></div>
     </div>
     <div id="page-wraper">
-        <div id="top-menu" class="buttons">
-            <h3 id="page-title">Compras: Dashboard</h3>
+        <div id="top-menu" class="buttons position-fixed">
+            
+
+            <h3 id="page-title" >
+            
+                Compras: Dashboard
+                <button onclick="menuHandle()" id="humberger-menu" aria-expanded="false" class="btn p-2 border  mb-2 ">
+                    <img id="humburder-img1" class="" width="30px" src="assets/img/humberger-menu.png" alt="">
+                    <img id="humburder-img2" class="d-none" width="30px" src="assets/img/close-clean.svg" alt="">
+                </button>
+            </h3>
         </div>
-        <div id="content" class="content-mob">
-            <div class="info-even-row info-even-row-mob">
+        <div id="content" class="content-mob pt-5  mt-5">
+            <div class="info-even-row info-even-row-mob  ">
                 <div class="tarjeta">
                     <div class="d-flex justify-content-between">
                         <h4>Req con planilla:&nbsp;<span id="countReqConPlanilla">n</span></h4>
