--- a/Requerimientos.html
+++ b/Requerimientos.html
@@ -66,6 +66,7 @@
     <script src="assets/js/tablas.js"></script>
 
     <script src="assets/js/requerimientos.js"></script>
+        <script src="assets/js/humburger_menu.js"></script>
 </head>
 
 <body>
@@ -137,7 +138,15 @@
     </div>
     <div id="page-wraper">
         <div id="top-menu" class="buttons">
-            <h3 id="page-title">Requerimientos</h3>
+            
+            <h3 id="page-title" class="">
+            
+                Requerimientos
+                <button onclick="menuHandle()" id="humberger-menu" aria-expanded="false" class="btn p-2 border  mb-2 ">
+                    <img id="humburder-img1" class="" width="30px" src="assets/img/humberger-menu.png" alt="">
+                    <img id="humburder-img2" class="d-none" width="30px" src="assets/img/close-clean.svg" alt="">
+                </button>
+            </h3>
         </div>
         <div id="content" class="content-column">
             <div class="tarjeta row-direction">
