--- a/Administracion.html
+++ b/Administracion.html
@@ -38,6 +38,7 @@
     <script src="assets/js/tablas.js"></script>
 
     <script src="assets/js/admin_dashboard.js"></script>
+    <script src="assets/js/humburger_menu.js"></script>
 </head>
 
 <body>
@@ -150,7 +151,15 @@
     </div>
     <div id="page-wraper">
         <div id="top-menu" class="buttons">
-            <h3 id="page-title">Administración: Dashboard</h3>
+         
+
+            <h3 id="page-title">            
+                Administración: Dashboard
+                <button onclick="menuHandle()" id="humberger-menu" aria-expanded="false" class="btn p-2 border  mb-2 ">
+                    <img id="humburder-img1" class="" width="30px" src="assets/img/humberger-menu.png" alt="">
+                    <img id="humburder-img2" class="d-none" width="30px" src="assets/img/close-clean.svg" alt="">
+                </button>
+            </h3>
             <div class="btn-group" role="group"><a class="btn fw-bold secondary-btn " role="button"
                     href="Administracion/Documentos.html">Documentos</a><a class="btn fw-bold secondary-btn " role="button"
                     href="Administracion/Conciliacion.html">Conciliación bancaria</a></div>
