--- a/Ventas.html
+++ b/Ventas.html
@@ -44,6 +44,7 @@
     <script src="assets/js/tablas.js"></script>
 
 <script src="assets/js/ventas_dashboard.js"></script>
+    <script src="assets/js/humburger_menu.js"></script>
 </head>
 
 <body>
@@ -114,11 +115,18 @@
         <div id="overlay" class="nav-group-item"></div>
     </div>
     <div id="page-wraper">
-        <div id="top-menu" class="buttons">
-            <h3 id="page-title">Ventas: Dashboard</h3>
+        <div id="top-menu" class="buttons position-fixed">
+            
+            <h3 id="page-title" class="">            
+                Ventas: Dashboard
+                <button onclick="menuHandle()" id="humberger-menu" aria-expanded="false" class="btn p-2 border  mb-2 ">
+                    <img id="humburder-img1" class="" width="30px" src="assets/img/humberger-menu.png" alt="">
+                    <img id="humburder-img2" class="d-none" width="30px" src="assets/img/close-clean.svg" alt="">
+                </button>
+            </h3>
             <div class="btn-group" role="group"><a class="btn secondary-btn" role="button" href="Ventas/AnadirRequerimientos.html">Añadir requerimientos</a><a class="btn secondary-btn" role="button" href="Ventas/OCClientes.html">Añadir OC clientes</a></div>
         </div>
-        <div id="content" class="content-mob">
+        <div id="content" class="content-mob fixed-top-margin"  >
             <div class="info-even-row info-even-row-mob">
                 <div class="tarjeta">
                     <div class="justify-content-between d-flex ">
