--- a/Compras/ConPlanilla.html
+++ b/Compras/ConPlanilla.html
@@ -37,6 +37,7 @@
     <!--Global functions -->
     <script src="../assets/js/tablas.js"></script>
     <script src="../assets/js/compras_conPlanilla.js"></script>
+    <script src="../assets/js/humburger_menu.js"></script>
 </head>
 
 <body>
@@ -149,7 +150,14 @@
     </div>
     <div id="page-wraper">
         <div id="top-menu" class="buttons">
-            <h3 id="page-title">Compras: Req con planilla</h3>
+            
+            <h3 id="page-title">
+                Compras: Req con planilla
+                <button onclick="menuHandle()" id="humberger-menu" aria-expanded="false" class="btn p-2 border  mb-2 ">
+                    <img id="humburder-img1" class="" width="30px" src="../assets/img/humberger-menu.png" alt="">
+                    <img id="humburder-img2" class="d-none" width="30px" src="../assets/img/close-clean.svg" alt="">
+                </button>
+            </h3>
             <div class="btn-group "><a class="btn fw-bold  secondary-btn " role="button" id="btnDevolver">Devolver con
                     observaciones</a><a class="btn  btn-primary fw-bold btn-font" role="button" id="btnEnviar">Enviar
                     ofertas listas</a></div>
