--- a/Ventas/AnadirOCClientes.html
+++ b/Ventas/AnadirOCClientes.html
@@ -41,7 +41,9 @@
     <script src="../assets/bootstrap/js/bootstrap.min.js"></script>
 
     <!--Global functions -->
-    <script src="../assets/js/tablas.js"></script><script src="../assets/js/ventas_anadirOCClientes.js"></script>
+    <script src="../assets/js/tablas.js"></script>
+    <script src="../assets/js/ventas_anadirOCClientes.js"></script>
+    <script src="../assets/js/humburger_menu.js"></script>
 </head>
 
 <body>
@@ -113,7 +115,15 @@
     </div>
     <div id="page-wraper">
         <div id="top-menu" class="buttons">
-            <h3 id="page-title">Ventas: Añadir orden de compra cliente</h3>
+          
+
+            <h3 id="page-title">            
+                Ventas: Añadir orden de compra cliente
+                <button onclick="menuHandle()" id="humberger-menu" aria-expanded="false" class="btn p-2 border  mb-2 ">
+                    <img id="humburder-img1" class="" width="30px" src="../assets/img/humberger-menu.png" alt="">
+                    <img id="humburder-img2" class="d-none" width="30px" src="../assets/img/close-clean.svg" alt="">
+                </button>
+            </h3>
             <div class="btn-group" role="group"><a class="btn secondary-btn " role="button" href="Ventas/Dashboard.html">Cancelar</a><a class="btn btn-primary" role="button" id="btnGuardar">Guardar</a></div>
         </div>
         <div id="content" class="content-column">
