--- a/Compras/OCClientes.html
+++ b/Compras/OCClientes.html
@@ -41,6 +41,7 @@
 
     <!--Global functions -->
     <script src="../assets/js/tablas.js"></script>
+    <script src="../assets/js/humburger_menu.js"></script>
 </head>
 
 <body>
@@ -112,7 +113,16 @@
     </div>
     <div id="page-wraper">
         <div id="top-menu" class="buttons">
-            <h3 id="page-title">Compras: OC clientes pendientes</h3><a class="btn secondary-btn" role="button" id="btnComprar" href="Compras/OCProveedores.html">Comprar</a>
+            
+            <h3 id="page-title">
+                Compras: OC clientes pendientes
+                <button onclick="menuHandle()" id="humberger-menu" aria-expanded="false" class="btn p-2 border  mb-2 ">
+                    <img id="humburder-img1" class="" width="30px" src="../assets/img/humberger-menu.png" alt="">
+                    <img id="humburder-img2" class="d-none" width="30px" src="../assets/img/close-clean.svg" alt="">
+                </button>
+            </h3>
+            
+           <div class="btn-group"><a class="btn secondary-btn" role="button" id="btnComprar" href="Compras/OCProveedores.html">Comprar</a></div>
         </div>
         <div id="content" class="content-column">
 
