--- a/Logistica/Movimientos.html
+++ b/Logistica/Movimientos.html
@@ -41,6 +41,7 @@
 
     <!--Global functions -->
     <script src="../assets/js/tablas.js"></script><script src="../assets/js/logistica_movimientos.js"></script>
+    <script src="../assets/js/humburger_menu.js"></script>
 </head>
 
 <body>
@@ -111,8 +112,14 @@
         <div id="overlay" class="nav-group-item"></div>
     </div>
     <div id="page-wraper">
-        <div id="top-menu" class="buttons">
-            <h3 id="page-title">Logistica: Seguimiento de movimientos logísticos</h3>
+        <div id="top-menu" class="buttons">         
+            <h3 id="page-title">
+            Logistica: Seguimiento de movimientos logísticos
+                <button onclick="menuHandle()" id="humberger-menu" aria-expanded="false" class="btn p-2 border  mb-2 ">
+                    <img id="humburder-img1" class="" width="30px" src="../assets/img/humberger-menu.png" alt="">
+                    <img id="humburder-img2" class="d-none" width="30px" src="../assets/img/close-clean.svg" alt="">
+                </button>
+            </h3>
         </div>
         <div id="content" class="content-column">
             <div class="tarjeta row-direction">
