--- a/Logistica/NuevasOCs.html
+++ b/Logistica/NuevasOCs.html
@@ -41,6 +41,7 @@
 
     <!--Global functions -->
     <script src="../assets/js/tablas.js"></script><script src="../assets/js/logistica_nuevasOCs.js"></script>
+    <script src="../assets/js/humburger_menu.js"></script>
 </head>
 
 <body>
@@ -111,8 +112,16 @@
         <div id="overlay" class="nav-group-item"></div>
     </div>
     <div id="page-wraper">
-        <div id="top-menu" class="buttons">
-            <h3 id="page-title">Logistica: Nuevas ordenes de compra</h3><a class="btn secondary-btn" role="button" href="Logistica/Planear.html">Planear</a>
+        <div id="top-menu" class="buttons">           
+            <h3 id="page-title">
+                Logistica: Nuevas ordenes de compra
+                <button onclick="menuHandle()" id="humberger-menu" aria-expanded="false" class="btn p-2 border  mb-2 ">
+                    <img id="humburder-img1" class="" width="30px" src="../assets/img/humberger-menu.png" alt="">
+                    <img id="humburder-img2" class="d-none" width="30px" src="../assets/img/close-clean.svg" alt="">
+                </button>
+            </h3>
+            
+            <a class="btn secondary-btn" role="button" href="Logistica/Planear.html">Planear</a>
         </div>
         <div id="content" class="content-column">
             <div class="tarjeta">
