--- a/Logistica/Planear.html
+++ b/Logistica/Planear.html
@@ -40,7 +40,9 @@
     <script src="../assets/bootstrap/js/bootstrap.min.js"></script>
 
     <!--Global functions -->
-    <script src="../assets/js/tablas.js"></script><script src="../assets/js/logistica_planear.js"></script>
+    <script src="../assets/js/tablas.js"></script>
+    <script src="../assets/js/logistica_planear.js"></script>
+    <script src="../assets/js/humburger_menu.js"></script>
 </head>
 
 <body>
@@ -112,7 +114,15 @@
     </div>
     <div id="page-wraper">
         <div id="top-menu" class="buttons">
-            <h3 id="page-title">Logística: Dashboard</h3>
+          
+
+            <h3 id="page-title">
+                Logística: Dashboard
+                <button onclick="menuHandle()" id="humberger-menu" aria-expanded="false" class="btn p-2 border  mb-2 ">
+                    <img id="humburder-img1" class="" width="30px" src="../assets/img/humberger-menu.png" alt="">
+                    <img id="humburder-img2" class="d-none" width="30px" src="../assets/img/close-clean.svg" alt="">
+                </button>
+            </h3>
         </div>
         <div id="content" >
             <div class="info-even-row info-even-row-mob overflow-x-auto">
