update css done

--- a/Compras/ConPlanilla.html
+++ b/Compras/ConPlanilla.html
@@ -163,7 +163,7 @@
                     ofertas listas</a></div>
         </div>
         <div id="content" class="content-column">
-            <div class="flex-wrap d-flex flex-row ">
+            <div class="info-r2-container">
                 <div class=" btn-group flex-wrap mb-4 " role="group">
                     <button class="btn fw-semibold" id="btnVistaProductos" type="button">Por producto</button>
                     <button class="btn fw-semibold secondary-btn " id="btnVistaProveedores" type="button">Por
