--- a/Ventas.html
+++ b/Ventas.html
@@ -115,7 +115,7 @@
         <div id="overlay" class="nav-group-item"></div>
     </div>
     <div id="page-wraper">
-        <div id="top-menu" class="buttons position-fixed">
+        <div id="top-menu" class="buttons top-menu-sticky">
             
             <h3 id="page-title" class="">            
                 Ventas: Dashboard
