--- a/Logistica.html
+++ b/Logistica.html
@@ -124,7 +124,7 @@
                     <img id="humburder-img2" class="d-none" width="30px" src="assets/img/close-clean.svg" alt="">
                 </button>
             </h3>
-            <a class="btn fw-bold secondary-btn" role="button" id="btnMovimientos">Todos los movimientos</a>
+            <div class="btn-group"><a class="btn fw-bold secondary-btn" role="button" id="btnMovimientos">Todos los movimientos</a></div>
         </div>
         <div id="content" class="content-mob">
             <div class="tarjeta">
