--- a/Ventas.html
+++ b/Ventas.html
@@ -151,7 +151,7 @@
                             </svg></div>
                     </div>
                     <div class="list-group deck-border" id="divReqPendientes"><a
-                            class="list-group-item list-group-item-action deck-row comment-row" href="Ventas/Analisis.html">
+                            class="list-group-item list-group-item-action deck-row-update comment-row" href="Ventas/Analisis.html">
                             <div class="comment-title">
                                 <div class="deck-title">
                                     <h5>Req: Nombre de req</h5>
@@ -163,7 +163,7 @@
                                 <h6>[día, hora] Usuario:</h6>
                                 <p>Comentario</p>
                             </div>
-                        </a><a class="list-group-item list-group-item-action deck-row comment-row" href="Ventas/Analisis.html">
+                        </a><a class="list-group-item list-group-item-action deck-row-update comment-row" href="Ventas/Analisis.html">
                             <div class="comment-title">
                                 <div class="deck-title">
                                     <h5>Req: Nombre de req</h5>
@@ -175,7 +175,7 @@
                                 <h6>[día, hora] Usuario:</h6>
                                 <p>Comentario</p>
                             </div>
-                        </a><a class="list-group-item list-group-item-action deck-row comment-row" href="Ventas/Analisis.html">
+                        </a><a class="list-group-item list-group-item-action deck-row-update comment-row" href="Ventas/Analisis.html">
                             <div class="comment-title">
                                 <div class="deck-title">
                                     <h5>Req: Nombre de req</h5>
@@ -187,7 +187,7 @@
                                 <h6>[día, hora] Usuario:</h6>
                                 <p>Comentario</p>
                             </div>
-                        </a><a class="list-group-item list-group-item-action deck-row comment-row" href="Ventas/Analisis.html">
+                        </a><a class="list-group-item list-group-item-action deck-row-update comment-row" href="Ventas/Analisis.html">
                             <div class="comment-title">
                                 <div class="deck-title">
                                     <h5>Req: Nombre de req</h5>
@@ -199,7 +199,7 @@
                                 <h6>[día, hora] Usuario:</h6>
                                 <p>Comentario</p>
                             </div>
-                        </a><a class="list-group-item list-group-item-action deck-row comment-row" href="Ventas/Analisis.html">
+                        </a><a class="list-group-item list-group-item-action deck-row-update comment-row" href="Ventas/Analisis.html">
                             <div class="comment-title">
                                 <div class="deck-title">
                                     <h5>Req: Nombre de req</h5>
@@ -211,7 +211,7 @@
                                 <h6>[día, hora] Usuario:</h6>
                                 <p>Comentario</p>
                             </div>
-                        </a><a class="list-group-item list-group-item-action deck-row comment-row" href="Ventas/Analisis.html">
+                        </a><a class="list-group-item list-group-item-action deck-row-update comment-row" href="Ventas/Analisis.html">
                             <div class="comment-title">
                                 <div class="deck-title">
                                     <h5>Req: Nombre de req</h5>
@@ -223,7 +223,7 @@
                                 <h6>[día, hora] Usuario:</h6>
                                 <p>Comentario</p>
                             </div>
-                        </a><a class="list-group-item list-group-item-action deck-row comment-row" href="Ventas/Analisis.html">
+                        </a><a class="list-group-item list-group-item-action deck-row-update comment-row" href="Ventas/Analisis.html">
                             <div class="comment-title">
                                 <div class="deck-title">
                                     <h5>Req: Nombre de req</h5>
@@ -235,7 +235,7 @@
                                 <h6>[día, hora] Usuario:</h6>
                                 <p>Comentario</p>
                             </div>
-                        </a><a class="list-group-item list-group-item-action deck-row comment-row" href="Ventas/Analisis.html">
+                        </a><a class="list-group-item list-group-item-action deck-row-update comment-row" href="Ventas/Analisis.html">
                             <div class="comment-title">
                                 <div class="deck-title">
                                     <h5>Req: Nombre de req</h5>
