--- a/Requerimientos.html
+++ b/Requerimientos.html
@@ -171,8 +171,8 @@
             <div class="tarjeta">
                 <h4 id="tituloCotizaciones">Requerimientos:&nbsp;<span id="countReq">n</span></h4>
                 <div class="table-group">
-                    <div class="table-responsive table-res-up" id="tblReq">
-                        <table class="table">
+                    <div class="table-responsive table-res-up " id="tblReq">
+                        <table class="tabulator">
                             <thead>
                                 <tr>
                                     <th>Cod&nbsp;Req</th>
