--- a/Ventas/OCClientes.html
+++ b/Ventas/OCClientes.html
@@ -148,9 +148,9 @@
             <div class="tarjeta">
                 <h4 id="tituloCotizaciones">Cotizaciones a clientes:&nbsp;<span id="countCotizaciones">n</span></h4>
                 <div class="table-group">
-                    <div class="table-responsive" id="tblCotizaciones">
+                    <div class="table-responsive tabulator" id="tblCotizaciones">
                         <table class="table ">
-                            <thead>
+                            <thead >
                                 <tr>
                                     <th>Req</th>
                                     <th>Fecha</th>
@@ -244,7 +244,7 @@
                 <div class="info-even-row info-even-row-mob">
                     <div>
                         <h5 id="subtitle-productos" class="mb-3 fw-bold">Productos:&nbsp;<span id="countProductos">n</span></h5>
-                        <div class="table-responsive" id="tblProductos">
+                        <div class="table-responsive tabulator" id="tblProductos">
                             <table class="table ">
                                 <thead>
                                     <tr>
@@ -283,7 +283,7 @@
                             <p id="detalle-posicion">Almacén de acopio SMP</p>
                         </div>
                         <h6 class="fw-semibold">Abonos:&nbsp;<span id="countAbonos">n</span></h6>
-                        <div class="table-responsive" id="tblAbonos">
+                        <div class="table-responsive tabulator" id="tblAbonos">
                             <table class="table ">
                                 <thead>
                                     <tr>
