--- a/Administracion.html
+++ b/Administracion.html
@@ -306,7 +306,7 @@
                 </div>
                 <div>
                     <h3 class="text-center mb-3  fw-bold" id="selected-date">Vencimientos de 13/04/2024</h3>
-                    <div class="p2">
+                    <div class="p2 table-responsive tabulator">
                         <table class="table   mt-3 " id="tabla-vencimientos">
                             <thead class="p1">
                                 <tr>
