--- a/Compras/ConPlanilla.html
+++ b/Compras/ConPlanilla.html
@@ -531,7 +531,7 @@
                             masiva</button><button class="btn secondary-btn" id="btnNuevoProducto" type="button">Añadir
                             producto</button></div>
                 </div>
-                <div class="table-responsive " id="tblProductosEnOferta">
+                <div class="table-responsive tabulator " id="tblProductosEnOferta">
                     <table class="table  ">
                         <thead>
                             <tr>
