--- a/Compras/OCClientes.html
+++ b/Compras/OCClientes.html
@@ -179,7 +179,7 @@
             </div>
             <div class="tarjeta ">
                 <h4>Productos:&nbsp;<span id="countProductos">n</span></h4>
-                <div class="table-responsive" id="tblProductosOC">
+                <div class="table-responsive tabulator" id="tblProductosOC">
                     <table class="table  ">
                         <thead>
                             <tr>
