--- a/Compras/OCProveedores.html
+++ b/Compras/OCProveedores.html
@@ -409,7 +409,7 @@
                         <div class="info-detail ">
                             <h6 class="fw-semibold">En logistica:</h6><button class="btn secondary-btn" type="button">Agregar a logística</button>
                         </div>
-                        <div class="table-responsive">
+                        <div class="table-responsive tabulator">
                             <table class="table  ">
                                 <thead>
                                     <tr>
@@ -454,7 +454,7 @@
                         <div class="info-detail">
                             <h6 class="fw-semibold">En logistica:</h6><button class="btn secondary-btn" type="button">Agregar a logística</button>
                         </div>
-                        <div class="table-responsive">
+                        <div class="table-responsive tabulator">
                             <table class="table ">
                                 <thead>
                                     <tr>
@@ -484,7 +484,7 @@
                 <div class="card-title-group">
                     <h4>Revisar precios:&nbsp;<span id="countRevision">n</span></h4><button class="btn secondary-btn" id="btnGenerarOC" type="button">Generar OC</button>
                 </div>
-                <div class="table-responsive" id="tblRevisarPrecios">
+                <div class="table-responsive tabulator" id="tblRevisarPrecios">
                     <table class="table  ">
                         <thead>
                             <tr>
