--- a/Logistica/NuevasOCs.html
+++ b/Logistica/NuevasOCs.html
@@ -121,7 +121,7 @@
                 </button>
             </h3>
             
-            <a class="btn secondary-btn" role="button" href="Logistica/Planear.html">Planear</a>
+           <div class="btn-group"><a class="btn secondary-btn" role="button" href="Logistica/Planear.html">Planear</a></div>
         </div>
         <div id="content" class="content-column">
             <div class="tarjeta">
@@ -162,7 +162,7 @@
             </div>
             <div class="tarjeta">
                 <h4>OC proveedores:&nbsp;<span id="countOCProveedores">n</span></h4>
-                <div class="table-responsive" id="tblOCProveedores">
+                <div class="table-responsive " id="tblOCProveedores">
                     <table class="table ">
                         <thead>
                             <tr>
@@ -229,7 +229,7 @@
                     </div>
                 </div>
                 <h6 class="fw-bold ">Productos:&nbsp;<span id="countProductos">n</span></h6>
-                <div class="table-responsive" id="tblProductos">
+                <div class="table-responsive tabulator" id="tblProductos">
                     <table class="table ">
                         <thead>
                             <tr>
