--- a/Ventas/OCClientes.html
+++ b/Ventas/OCClientes.html
@@ -145,10 +145,10 @@
                         <input id="input-fecha2" class="date-input form-control-sm placeholder-text" type="date"></div>
                 </div>
             </div>
-            <div class="tarjeta">
+            <div class="tarjeta ">
                 <h4 id="tituloCotizaciones">Cotizaciones a clientes:&nbsp;<span id="countCotizaciones">n</span></h4>
-                <div class="table-group">
-                    <div class="table-responsive tabulator" id="tblCotizaciones">
+                <div class="table-group ">
+                    <div class="table-responsive tabulator overflow-x-scroll" id="tblCotizaciones">
                         <table class="table ">
                             <thead >
                                 <tr>
