--- a/Administracion/Conciliacion.html
+++ b/Administracion/Conciliacion.html
@@ -194,7 +194,7 @@
                         </table>
                     </div>
                 </div>
-                <div id="terjeta-two" class="tarjeta">
+                <div id="terjeta-two" class="tarjeta-full-hight">
                     <h4>Movimientos bancarios:&nbsp;<span id="countMovimientos">n</span></h4>
                     <div class="table-responsive" id="tblMovimientos">
                         <table class="table">
