bottom scroling remove

--- a/Administracion/Conciliacion.html
+++ b/Administracion/Conciliacion.html
@@ -146,7 +146,7 @@
                     <div class="input-div"><input id="input-fecha2" class="date-input form-control-sm placeholder-text" type="date"></div>
                 </div>
             </div>
-            <div class="info-even-row info-even-row-update info-even-row-mob ">
+            <div class="info-even-row  info-even-row-mob ">
                 <div id="terjeta-one" class="tarjeta ">
                     <div class="card-title-group">
                         <h4>Registro de bancos</h4><button class="btn b secondary-btn" id="btnImportar" type="button">Importar reporte</button>
